# fastapp

./: README.md  pyproject.toml
app/: app.py
app/configs/: __init__.py
app/core/: __init__.py
app/db/: __init__.py
app/schema/: __init__.py
