[project]
name = "fastapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.43",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
